/*-
 * #%L
 * Baleen 3
 * %%
 * Copyright (C) 2020 Dstl
 * %%
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 * #L%
 */
import React from 'react'
import { render, renderDark } from '../../utils/test'
import { Footer } from '.'

it('renders without error', () => {
  const { asFragment } = render(<Footer />)
  expect(asFragment()).toMatchSnapshot()
})

it('renders dark without error', () => {
  const { asFragment } = renderDark(<Footer />)
  expect(asFragment()).toMatchSnapshot()
})
it('Contains Credit and License sections', () => {
  const { getAllByText } = render(<Footer />)

  expect(getAllByText(/Credit/i).length).toBeGreaterThan(0)
  expect(getAllByText(/License/i).length).toBeGreaterThan(0)
})

it('Contains link text', () => {
  const { getAllByText } = render(<Footer />)

  expect(getAllByText(/GitHub/i).length).toBeGreaterThan(0)
  expect(getAllByText(/Dstl/i).length).toBeGreaterThan(0)
})
